5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4480/executions/1594_2425.log
== TEST (2019-04-28 13:07:17) 
-- CODE:
distancia = int(input(''))
combustivel = int(input(''))
consumomed = 
-- ERROR:
File "XXXX", line 3
    consumomed = 
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:07:59) 
-- CODE:
distancia = int(input(''))
combustivel = int(input(''))
consumomed = distancia*combustivel
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    distancia = int(input(''))
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:09:14) 
-- CODE:
distancia = int(input(''))
combustivel = int(input(''))
consumomed = distancia*combustivel
print(round(consumomed,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    distancia = int(input(''))
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:09:46) 
-- CODE:
distancia = int(input(''))
combustivel = int(input(''))
consumomed = distancia*combustivel
print(round(consumomed,3 'km/l'))
-- ERROR:
File "XXXX", line 4
    print(round(consumomed,3 'km/l'))
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:10:23) 
-- CODE:
distancia = int(input(''))
combustivel = int(input(''))
consumomed = distancia*combustivel
print(round(consumomed,3)'km/l')
-- ERROR:
File "XXXX", line 4
    print(round(consumomed,3)'km/l')
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:10:32) 
-- CODE:
distancia = int(input(''))
combustivel = int(input(''))
consumomed = distancia*combustivel
print(round(consumomed,3) 'km/l')
-- ERROR:
File "XXXX", line 4
    print(round(consumomed,3) 'km/l')
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:11:09) 
-- CODE:
distancia = int(input(''))
combustivel = int(input(''))
consumomed = distancia*combustivel
print('round(consumomed,3) 'km/l'')
-- ERROR:
File "XXXX", line 4
    print('round(consumomed,3) 'km/l'')
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:11:28) 
-- CODE:
distancia = int(input(''))
combustivel = int(input(''))
consumomed = distancia*combustivel
print(round(consumomed,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    distancia = int(input(''))
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:13:31) 
-- CODE:
distancia = int(input(''))
combustivel = int(input(''))
consumomed = distancia/combustivel
print(round(consumomed,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    distancia = int(input(''))
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:15:41) 
-- CODE:
distancia = int(input(''))
combustivel = int(input(''))
consumomed = distancia/combustivel
print(round(consumomed,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    distancia = int(input(''))
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:16:02) 
-- CODE:
distancia = int(input(''))
combustivel = int(input(''))
consumomed = distancia/combustivel
print(round(consumomed,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    distancia = int(input(''))
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:19:04) 
-- CODE:
distancia = int(input(''))
combustivel = int(input(''))
consumomed = distancia/combustivel
print(round(consumomed,3), "km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    distancia = int(input(''))
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 13:19:13) 
-- CODE:
distancia = int(input(''))
combustivel = int(input(''))
consumomed = distancia/combustivel
print(round(consumomed,3), "km/l")
-- EXECUTION TIME:
0.165764
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2425/main.py", line 1, in <module>
    distancia = int(input(''))
ValueError: invalid literal for int() with base 10: '28.572'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:19:24) 
-- CODE:
distancia = int(input(''))
combustivel = int(input(''))
consumomed = distancia/combustivel
print(round(consumomed,3), "km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    distancia = int(input(''))
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 13:20:13) 
-- CODE:
distancia = int(input(''))
combustivel = int(input(''))
consumomed = distancia/combustivel
print(round(consumomed,3), "km/l")
-- EXECUTION TIME:
0.138423
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2425/main.py", line 1, in <module>
    distancia = int(input(''))
ValueError: invalid literal for int() with base 10: '28.572'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:20:46) 
-- CODE:
distancia = int(input(''))
combustivel = int(input(''))
consumomed = distancia/combustivel
print(round(consumomed,3), "km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    distancia = int(input(''))
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:22:33) 
-- CODE:
distancia = int(input(''))
combustivel = int(input(''))
consumomed = distancia/combustivel
print(round(consumomed,3), "km/l.")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    distancia = int(input(''))
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 13:22:36) 
-- CODE:
distancia = int(input(''))
combustivel = int(input(''))
consumomed = distancia/combustivel
print(round(consumomed,3), "km/l.")
-- EXECUTION TIME:
0.128395
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2425/main.py", line 1, in <module>
    distancia = int(input(''))
ValueError: invalid literal for int() with base 10: '28.572'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:22:50) 
-- CODE:
distancia = int(input(''))
combustivel = int(input(''))
consumomed = distancia/combustivel
print(round(consumomed,3), "km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    distancia = int(input(''))
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:24:03) 
-- CODE:
distancia = float(input(''))
combustivel = float(input(''))
consumomed = distancia/combustivel
print(round(consumomed,3), "km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 13:24:16) 
-- CODE:
distancia = float(input(''))
combustivel = float(input(''))
consumomed = distancia/combustivel
print(round(consumomed,3), "km/l")
-- EXECUTION TIME:
0.213895
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
